# dumb_meta

./: CMakeLists.txt  LICENSE  readme.org
src/: CMakeLists.txt
src/inspection/: attribute.h  inspection.cpp  inspection.h  inspection_imgui.cpp  inspector_standard_type.cpp
src/meta_gen/: meta_gen.cpp  meta_type_handler.h  meta_type_handler_rttr.cpp  path_util.h  path_util_win.cpp  reflection.h  type_info.h
test/: CMakeLists.txt  gui_stub.cpp  meta_store.cpp  meta_test.cpp  prop.h
